--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
               create easily, manage and deploy digital content to any device, anywhere in the world.</p>
           </div>
           <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/menu.png" alt="">
               </div>
@@ -440,7 +440,7 @@
                 you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
               </div>
@@ -450,7 +450,7 @@
                 provides you with all the tools to build fully interactive applications and signage content with ease.
               </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/signage.png" alt="">
               </div>
@@ -462,7 +462,7 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
               </div>
@@ -472,7 +472,7 @@
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
                 capturing new customers and raising brand awareness.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/video.png" alt="">
               </div>
@@ -480,7 +480,7 @@
               <p>Build video walls of virtually any size or orientation. Enjoy seamless content playback across multiple
                 screens, and even build interactive video walls and multi-screen kiosks.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/shelf.png" alt="">
               </div>
@@ -491,7 +491,7 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/project.png" alt="">
               </div>
@@ -501,7 +501,7 @@
                 with, what you want to say and when. We can then select the right combination of products and services
                 which provides you with a bespoke solution.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/cloude.png" alt="">
               </div>
@@ -510,7 +510,7 @@
                 to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
                 which means you don’t have to worry about downloading any software.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/hardware.png" alt="">
               </div>
