sectors part added in home page

--- a/index.html
+++ b/index.html
@@ -623,56 +623,96 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div> -->
+    </div>  -->
     <!-- End Digital Signage Section Section -->
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" style="height: 70vh;">
-      <div id="heroCarousel2" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
-        <ol class="carousel-indicators" id="hero-carousel-indicators2"></ol>
-
-        <div class="carousel-inner" role="listbox" style="background-color: #ffffff;">
-
-          <!-- Slide 1 -->
-          <div class="carousel-item active mt-5" style="background-image: url(assets/img/retail/s1.jpg)">
-            <div class="carousel-container mt-5">
-              <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
-                  <br>
-                  Are you looking to create a dynamic in-store experience with Digital Store Signage? 
-                </h2>
-              </div>
-            </div>
+    <!-- ======= Start Features Section ======= -->
+    <section class="products p-0 mt-5">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Sector/Solutions</h2>
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="indoor-lcd-display.html">
+              <img src="assets/img/retail/retail1.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Retail</b></p>
+            </a>
           </div>
-
-          <!-- Slide 2 -->
-          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
-            <div class="carousel-container mt-5">
-              <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
-                  <br>
-                  We will provide you with a solution that promises to increase customer engagement and boost sales. 
-                </h2>
-              </div>
-            </div>
+          <div class="col-md-3">
+            <a href="lcd-video-wall.html">
+              <img src="assets/img/restaurants/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Bar/Restaurants</b></p>
+            </a>
           </div>
-
-          <!-- Slide 3 -->
-          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/s4.jpg)">
-            <div class="carousel-container mt-5">
-              <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span>
-                  <br>
-                  Enhance Branding with Retail Digital Signage
-                </h2>
-              </div>
-            </div>
+          <div class="col-md-3">
+            <a href="lcd-advertising-display.html">
+              <img src="assets/img/hotels/9.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Hotels</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="outdoor-lcd-display.html">
+              <img src="assets/img/education/new2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Education</b></p>
+            </a>
           </div>
         </div>
-
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="advertising-light-box.html">
+              <img src="assets/img/mall/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Mall/Supermarket</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="frontlit-billboard.html">
+              <img src="assets/img/travel/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Travel Agent</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="backlit-billboard.html">
+              <img src="assets/img/hospital/new3.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Hospitals</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="led-screen-billboard.html">
+              <img src="assets/img/Car-show/C.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Car Show</b></p>
+            </a>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="scrolling-billboard.html">
+              <img src="assets/img/Gym/1.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Gym/Fitness Center</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="scrolling-lightbox.html">
+              <img src="assets/img/Airport/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Airport</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lamp-pole-lightbox.html">
+              <img src="assets/img/Event-places/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Event Places</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lamp-pole-display.html">
+              <img src="assets/img/Government-institutions/1.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Government Institutions</b></p>
+            </a>
+          </div>
+        </div>
       </div>
-    </section><!-- End Hero -->
+    </section>
+    <!-- End Features Section -->
+
+    
 
     <!-- ======= Start Features Section ======= -->
     <div class="feature mt-5">
