sectors part link added

--- a/index.html
+++ b/index.html
@@ -632,25 +632,25 @@
         <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Sector/Solutions</h2>
         <div class="row mt-3">
           <div class="col-md-3">
-            <a href="indoor-lcd-display.html">
+            <a href="rental.html">
               <img src="assets/img/retail/retail1.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Retail</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="lcd-video-wall.html">
+            <a href="restaurants.html">
               <img src="assets/img/restaurants/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Bar/Restaurants</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="lcd-advertising-display.html">
+            <a href="hotels.html">
               <img src="assets/img/hotels/9.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Hotels</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="outdoor-lcd-display.html">
+            <a href="education.html">
               <img src="assets/img/education/new2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Education</b></p>
             </a>
@@ -658,25 +658,25 @@
         </div>
         <div class="row mt-3">
           <div class="col-md-3">
-            <a href="advertising-light-box.html">
+            <a href="mall-supermarket.html">
               <img src="assets/img/mall/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Mall/Supermarket</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="frontlit-billboard.html">
+            <a href="travel-agent.html">
               <img src="assets/img/travel/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Travel Agent</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="backlit-billboard.html">
+            <a href="hospitals.html">
               <img src="assets/img/hospital/new3.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Hospitals</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="led-screen-billboard.html">
+            <a href="car-show.html">
               <img src="assets/img/Car-show/C.png" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Car Show</b></p>
             </a>
@@ -684,25 +684,25 @@
         </div>
         <div class="row mt-3">
           <div class="col-md-3">
-            <a href="scrolling-billboard.html">
+            <a href="gym.html">
               <img src="assets/img/Gym/1.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Gym/Fitness Center</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="scrolling-lightbox.html">
+            <a href="airport.html">
               <img src="assets/img/Airport/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Airport</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="lamp-pole-lightbox.html">
+            <a href="event-places.html">
               <img src="assets/img/Event-places/2.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Event Places</b></p>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="lamp-pole-display.html">
+            <a href="government-institutions.html">
               <img src="assets/img/Government-institutions/1.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Government Institutions</b></p>
             </a>
