--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Sector/Solutions</h2>
         <div class="row mt-3">
           <div class="col-md-3">
-            <a href="rental.html">
+            <a href="retail.html">
               <img src="assets/img/retail/retail1.jpg" alt="" class="img-fluid border border-dark">
               <p class="text-center text-dark"><b>Retail</b></p>
             </a>
