updated all title color as red

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <section class="about">
       <div class="container">
         <div class="row content text-center" id="howItWorks">
-          <h2>WHY WITH US</h2>
+          <h2 class="text-uppercase text-danger fw-bold">WHY WITH US</h2>
           <div class="col-md-4">
             <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
             <br>
@@ -372,7 +372,7 @@
 
         <div class="row content">
           <div class="text-center">
-            <h2>WELCOME</h2>
+            <h2 class="text-uppercase text-danger fw-bold">WELCOME</h2>
             <p>Displaying new content to your customers couldn’t be easier and quicker with our Signage software.
               With the ability of logging on to your personal portal from any pc connected to the internet you can
               control
@@ -424,7 +424,7 @@
 
         <div class="row content">
           <div>
-            <h2 class="text-center">WHAT WE DO</h2>
+            <h2 class="text-center text-uppercase text-danger fw-bold">WHAT WE DO</h2>
             <p class="text-center">Our cloud-based interactive digital signage software platform gives users the ability
               to
               create easily, manage and deploy digital content to any device, anywhere in the world.</p>
@@ -628,7 +628,7 @@
 
 
     <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">Some of Our Digital Signage Product
+      <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR  DIGITAL SIGNAGE SECTOR/SOLUTIONS
       </h2>
       <div class="row">
         <div class="owl-carousel owl-theme" id="aboutus">
@@ -714,7 +714,7 @@
     <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
-          <h2>FEATURES</h2>
+          <h2 class="text-uppercase text-danger fw-bold">FEATURES</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque at, perspiciatis
             recusandae sequi iure doloremque dicta dolorem!</p>
           <br>
@@ -811,16 +811,11 @@
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <!-- <li data-filter="*" >All</li> -->
-              <!-- <li data-filter=".filter-app">App</li> -->
-              <li data-filter=".filter-card" class="filter-active">OUR WORK</li>
-              <!-- <li data-filter=".filter-web">Web</li> -->
-            </ul>
+            <h2 class="text-uppercase text-danger fw-bold"> Our Work</h2>
           </div>
         </div>
 
-        <div class="row portfolio-container" id="industries">
+        <div class="row portfolio-container mt-2" id="industries">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -1008,7 +1003,7 @@
     <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
-          <h2>INDUSTRIES</h2>
+          <h2 class="text-uppercase text-danger fw-bold">INDUSTRIES</h2>
           <p>While the idea of switching to digital signage can seem like a big project once implemented it can reap
             countless rewards for all
             Types of businesses, whether in be retailer, a hotel, or a company using signs to communicate internal
@@ -1380,7 +1375,7 @@
       <br>
       <br>
       <div class="container">
-        <h2>CUSTOMERS</h2>
+        <h2 class="text-uppercase text-danger fw-bold">CUSTOMERS</h2>
         <div class="row" id="contactUs">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -1415,7 +1410,7 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
-        <h1 class="text-center"><b><span class="red">CONTACT US TODAY</span></b></h1>
+        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="red">CONTACT US TODAY</span></b></h2>
         <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
         <h2 class="text-center"><b>Book An Online Demo</b></h2>
         <!-- <div>
