Welcome part updated

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
       </div>
     </div>
-    
+
 
     <!-- ======= Features Section ======= -->
     <section class="about white-smoke">
@@ -373,11 +373,12 @@
         <div class="row content">
           <div class="text-center">
             <h2 class="text-uppercase text-danger fw-bold">WELCOME</h2>
-            <p>Displaying new content to your customers couldn’t be easier and quicker with our Signage software.
-              With the ability of logging on to your personal portal from any pc connected to the internet you can
-              control
-              your screens wherever you are in the world and with three simple steps your new campaigns can be running
-              instantly.
+            <p>Aflax Digital Signage is a global leader in the digital signage and established as a market leader in the
+              development and delivery of business grade Digital Signage, IPTV and Video Streaming solutions.
+              We offer easy to use and cost-effective digital signage package that are suitable for numerous
+              market/vertical sectors with single or multi-screen applications across one or more locations. from a high
+              impact video wall to a single reception screen. From a free-standing retail display to a simple
+              counter-top picture frame, Aflax has the ideal solutions for effective digital signage.
             </p>
           </div>
           <br>
@@ -390,24 +391,31 @@
           <div class="row" id="whatWeDo">
             <div class="col-md-6">
               <div>
-                <h4>Step 1: Upload contents</h4>
-                <p>With your fantastic promotions all ready to go, simple upload your artwork to your portal from any pc
-                  connected to the internet. Our familiar drag and drop layout allow you to navigate with ease.</p>
+                <h4>1. Enhance Viewers</h4>
+                <p>
+                  To Enhance your viewers visual experience and engage on a dynamic platform, our digital signage is
+                  cost effective and easy way to engage with large audiences in public and private spaces.
+                </p>
               </div>
               <br>
               <div>
-                <h4>Step 2: Schedule</h4>
-                <p>Decide when you need your message to be displayed and how long for. Easily set times of the day, the
-                  days of the week and months of the year.</p>
+                <h4>2. Eco-Systems</h4>
+                <p>
+                  Our Eco-System Digital Signage is a complete integrated solution for corporate Business ¬ Education,
+                  Healthcare, Hospitality, Government, Tourism Retail environments.
+                  We are also specialists in sports and stadium technology, banking, and enterprise solutions.
+                </p>
               </div>
               <br>
               <div>
-                <h4>Step 3: Publish</h4>
-                <p>You are now ready to publish your contents and start communicating with your customers.</p>
+                <h4>3. Range of Solutions</h4>
+                <p>
+                  Our range of digital signage solutions include a simple to use digital signage platform which combines enterprise level digital signage design and software with affordable digital signage hardware equipment managed from a single platform with high-performance technology.
+                </p>
               </div>
             </div>
             <div class="col-md-6">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Q59eVItS4Vg"
+              <iframe width="560" height="415" src="https://www.youtube.com/embed/Q59eVItS4Vg"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -628,7 +636,7 @@
 
 
     <div class="container mt-5">
-      <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR  DIGITAL SIGNAGE SECTOR/SOLUTIONS
+      <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
       </h2>
       <div class="row">
         <div class="owl-carousel owl-theme" id="aboutus">
@@ -708,7 +716,7 @@
       </div>
     </div>
 
-    
+
 
     <!-- ======= Start Features Section ======= -->
     <div class="feature mt-5 white-smoke">
