home page card hover effect and border added

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
     <div class="container mt-5">
       <h2 class="text-center text-uppercase text-danger fw-bold">SOME OF OUR DIGITAL SIGNAGE SECTOR/SOLUTIONS
       </h2>
-      <div class="row">
+      <div class="row" id="features">
         <div class="owl-carousel owl-theme" id="aboutus">
           <div class="item">
             <a href="retail.html">
@@ -729,28 +729,28 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-2 offset-md-1">
+            <div class="col-md-2 offset-md-1 border border-dark p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/setup.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Simple Setup</b></h6>
               <p>No software to download. No Servers, Cloud-based application. Set up and running in minutes.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/no-hardware.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Little or No Hardware</b></h6>
               <p>Choose from a variety of players options including emended signage solutions called system-on-chip</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Easy Content Creation</b></h6>
               <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/screen.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -758,7 +758,7 @@
               <p>From shelf edge to 4k video, Aflax digital signage makes it easy to build high-definition video walls
                 of virtually any size or orientation.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -768,14 +768,14 @@
           </div>
 
           <div class="row" id="ourWork">
-            <div class="col-md-2 offset-md-1">
+            <div class="col-md-2 offset-md-1 border border-dark p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Schedules and Campaigns</b></h6>
               <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -783,14 +783,14 @@
               <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build interactive
                 experiences.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/photoshop.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Imprt Designs from Photoshop</b></h6>
               <p>Adobe users are able to upload and edit their designs layer by layer as displayed in photoshop.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -798,7 +798,7 @@
               <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
                 triggers to truly converse with individuals.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 border border-dark ms-1 p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -855,7 +855,7 @@
     <div class="container mt-5">
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Work
       </h2>
-      <div class="row">
+      <div class="row" id="industries">
         <div class="owl-carousel owl-theme" id="aboutus">
           <div class="item">
             <a href="hotels.html">
@@ -926,7 +926,7 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/retail.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -934,7 +934,7 @@
               <p>The retail sector is very popular for digital signage and mortar all wrangling to grab customers,
                 attention. When compared to static signage, digital signage solutions capture 400% more views.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/restaurant.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -943,7 +943,7 @@
                 cross-sells and drives a 31.8% upsell in overall sales volume at point of sale by displaying dynamic and
                 relevant content to your customers.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/tranportation.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -954,8 +954,8 @@
             </div>
 
           </div>
-          <div class="row">
-            <div class="col-md-4">
+          <div class="row mt-5">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/health.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -965,7 +965,7 @@
                 the healthcare industry the ability to engage and interactive with their patients and improve the level
                 of care.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/entertainment.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -975,7 +975,7 @@
                 advertising and promotional tools as it has been proven to increase the average purchase amount by
                 29.5%.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/corporate.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -985,8 +985,8 @@
                 morale, maximize productivity and enhance employee motivation.</p>
             </div>
           </div>
-          <div class="row" id="customers">
-            <div class="col-md-4">
+          <div class="row mt-5" id="customers">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/education.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -995,7 +995,7 @@
                 the most common solution for schools. Colleges. Universities and other training facilities are
                 interactive touch displays, video walls and reception screens.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/hospitality.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1005,7 +1005,7 @@
                 reception screens can really make a big difference within a hospitality venue and if used correctly can
                 boost customer satisfaction by 46%.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/logistics.png" alt="" class="img-fluid">
               <br>
               <br>
