video added in home page

--- a/index.html
+++ b/index.html
@@ -415,10 +415,13 @@
               </div>
             </div>
             <div class="col-md-6">
-              <iframe width="560" height="415" src="https://www.youtube.com/embed/Q59eVItS4Vg"
+              <video width="560" height="415" controls>
+                <source src="assets/vdo/video1.mp4">
+              </video>
+              <!-- <iframe width="560" height="415" src="https://www.youtube.com/embed/Q59eVItS4Vg"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen></iframe> -->
             </div>
           </div>
         </div>
