autoplay owl carousel

--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
               <div>
                 <h4>3. Range of Solutions</h4>
                 <p>
-                  Our range of digital signage solutions include a simple to use digital signage platform which combines enterprise level digital signage design and software with affordable digital signage hardware equipment managed from a single platform with high-performance technology.
+                  Our range of digital signage solutions include a simple to use digital signage platform which combines
+                  enterprise level digital signage design and software with affordable digital signage hardware
+                  equipment managed from a single platform with high-performance technology.
                 </p>
               </div>
             </div>
@@ -1491,6 +1493,9 @@
     $('.owl-carousel').owlCarousel({
       loop: true,
       margin: 10,
+      autoplay: true,
+      autoplayTimeout: 1000,
+      autoplayHoverPause: true,
       nav: true,
       responsive: {
         0: {
