contact us and footer color changed

--- a/index.html
+++ b/index.html
@@ -1342,11 +1342,10 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact white-smoke">
+    <section id="contact" class="contact bg-danger">
       <div class="container">
-        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="red">CONTACT US TODAY</span></b></h2>
-        <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
-        <h2 class="text-center"><b>Book An Online Demo</b></h2>
+        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
+        <!-- <h2 class="text-center"><b>Book An Online Demo</b></h2> -->
         <!-- <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
         </div> -->
@@ -1357,20 +1356,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4 class="text-white">Location:</h4>
+                <p class="text-white">A108 Adam Street, New York, NY 535022</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4 class="text-white">Email:</h4>
+                <p class="text-white">info@example.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4 class="text-white">Call:</h4>
+                <p class="text-white">+1 5589 55488 55s</p>
               </div>
 
             </div>
@@ -1379,7 +1378,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form white-smoke">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form bg-danger">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -1415,7 +1414,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Submit Demo Request</button></div>
+              <div class="text-center"><button class="btn btn-light">Submit</button></div>
             </form>
 
           </div>
@@ -1428,8 +1427,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
+  <footer id="footer" style="background-color: #000000;">
+    <div class="footer-top" style="background-color: #000000;">
       <div class="container">
         <div class="row">
 
